# uintx

./: Cargo.toml  README.md  test.sh
src/: lib.rs  type_macro.rs  u104.rs  u112.rs  u120.rs  u24.rs  u40.rs  u48.rs  u56.rs  u72.rs  u80.rs  u88.rs  u96.rs
tests/: as_array_test.rs  test.rs
